--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         <activity
             android:name=".Views.HomeActivity">
         </activity>
+        <activity
+            android:name=".Views.CRUDVisits">
+        </activity>
     </application>
 
 </manifest>
