--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
         android:allowBackup="true"
@@ -48,6 +49,9 @@
         </activity>
         <activity
             android:name=".Views.CRUDVisits">
+        </activity>
+        <activity
+            android:name=".Views.CRUDObras">
         </activity>
     </application>
 
