--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation  'com.fxn769:pix:1.5.4'
 
 }
