--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
 
     <application
         tools:replace="android:theme"
@@ -22,7 +24,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ATHM2APP">
+        android:theme="@style/Theme.ATHM2APP"
+        android:requestLegacyExternalStorage="true">
         <activity android:name=".Views.AuthActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity android:name=".Views.SplashScreen">
@@ -54,6 +57,7 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".Views.HomeActivity"></activity>
         <activity android:name=".Views.CRUDVisits"></activity>
+        <activity android:name=".Views.TestingDrive"></activity>
         <activity android:name=".Views.CRUDObras"></activity>
     </application>
 
